# f1-typer

./: .gitignore  docker-compose.yml  type.html
apps/api/: .gitignore  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 06e8c36220ae_initial_schema.py
apps/api/app/: main.py
apps/api/app/core/: config.py  database.py  dependecies.py
apps/api/app/core/auth/: schemas.py  utils.py
apps/api/app/models/: __init__.py  driver.py  prediction.py  race.py  result.py  user.py
